--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         var scrollPosition = window.scrollY || window.pageYOffset;
     
         // Check if scroll position is 25% or more of the document height
-        if (scrollPosition >= 0.25 * document.body.scrollHeight) {
+        if (scrollPosition >= 0.10 * document.body.scrollHeight) {
           openPopUp();
         }
       });
@@ -324,7 +324,7 @@
             </div>
 
             <div class="col">
-              <img src="assets/scrolly 1.png" alt="">
+              <img src="assets/scrolly 1.png" alt="" class="rollImage">
             </div>
           </div>
 
