--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Pop Up -->
 
     <!-- Scroll Pop Up -->
-      <div class="container-fluid" id="containerXp">
+      <div class="container-fluid" id="containerXp" style="display:none;">
         <div class="wrapperXp" id="wrapperXp">
           <div class="window window__tab shaking-objectp">
 
