--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             </div>
 
             <div class="col">
-              <img src="assets/scrolly 1.png" alt="">
+              <img src="assets/scrolly 1.png" alt="" class="rollImage">
             </div>
           </div>
 
