--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
       function openPopUp() {
         if (!popUpDisplayed) {
           document.getElementById('containerXp').style.display = 'flex';
-          document.body.style.overflow = 'hidden !important'; // Disable scrolling
+          document.body.style.overflow = 'hidden'; // Disable scrolling
+          document.body.classList.remove('normalbody');
+          document.body.classList.add('no-scroll');
           popUpDisplayed = true; // Set the flag to true
         }
       }
@@ -112,6 +114,8 @@
       function closePopUp() {
         document.getElementById('containerXp').style.display = 'none';
         document.body.style.overflow = 'auto'; // Enable scrolling
+        document.body.classList.remove('no-scroll');
+        document.body.classList.add('normalbody');
       }
     
       // Add an event listener to check scroll position
