--- a/index.html
+++ b/index.html
@@ -303,6 +303,14 @@
         </div>
       </section>
 
+      <section>
+        <div class="container-fluid" id="footer">
+          <span>
+            site by<b>trance</b>works
+          </span>
+        </div>
+      </section>
+
     <!-- Section End -->
 
 
