--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </section>
 
       <section>
-        <div class="container-fluid" id="footer">
+        <div class="container 1440" id="footer">
           <span>
             site by<b>trance</b>works
           </span>
