--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
   </head>
   <body>
 
-
+<!-- Hero Container   -->
+<div id="headerContainer">
 
 
     <!-- Section Start -->
@@ -355,6 +356,6 @@
       window.addEventListener('touchmove', handleScroll);
     </script>
   
-
+</div>
   </body>
 </html>
